jhj 팩트체크 상세 페이지 스타일 완료

--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -428,6 +428,23 @@
   }
 }
 
+.btn-send-note{
+  @include flex-center;
+
+  gap: 5px;
+
+  &:hover{
+    .txt{
+      color: darken(#B8BAC7, 15%);
+    }
+  }
+
+  .txt{
+    font-size: 13px;
+    color: #B8BAC7;
+  }
+}
+
 /* 버튼 포지션 센터일 때 */
 [position="single-centered"]{
   display: block;
