cgs - 아바타 lg 추가

--- a/src/assets/styles/component/_avatar-thumbnail.scss
+++ b/src/assets/styles/component/_avatar-thumbnail.scss
@@ -1,8 +1,11 @@
 .avatar{
   @include circle(40px);
-
   border: 1px solid #DDDEE6;
   overflow: hidden;
+
+  &.avatar-lg {
+    @include circle(50px);
+  }
   
   .avatar-img{
     width: 100%;
