cgs - 스타트업) 기업정보>기본정보

--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -468,6 +468,7 @@
   display: inline-block;
   vertical-align: middle;
   cursor: pointer;
+  margin-right: 5px;
 
   .txt{
     @include font-op($w: 600, $c: #00ce6a){
