--- a/src/assets/styles/page/_mypage.scss
+++ b/src/assets/styles/page/_mypage.scss
@@ -267,11 +267,12 @@
 
 // startup - EtprDefaultInfo
 .article-wrap {
-  border: 1px solid #000;
+  border-bottom: 1px solid #DDDEE6;
   padding: 30px 0;
-}
 
-.profile-image-wrap {
+  &:last-child {
+    border-bottom: none;
+  }
 
   .ttl {
     font-size: rem(16);
@@ -279,6 +280,38 @@
     color: #171820;
     margin-bottom: 20px;
   }
+
+  .info-grp {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    color: #171820;
+
+    &.is-padding-change {
+      
+      .info {
+        padding: 14px 0;
+      }
+    }
+
+    .label {
+      font-size: rem(15);
+      font-weight: 600;
+      flex-basis: 170px;
+      padding: 20px 0;
+    }
+
+    .info {
+      font-size: rem(15);
+      font-weight: 400;
+      flex-grow: 1;
+      padding: 20px 0;
+      border-bottom: 1px solid #DDDEE6;
+    }
+  }
+}
+
+.profile-image-wrap {
 
   .cont-wrap {
     display: flex;
