jhj 제출서류관리 페이지 완료

--- a/src/assets/styles/base/_helper.scss
+++ b/src/assets/styles/base/_helper.scss
@@ -70,3 +70,19 @@
   color: #B8BAC7;
   font-size: 13px;
 }
+
+.space-between{
+  @include flex{
+    @include flex-op(center, space-between);
+  }
+
+  width: 100%;
+}
+
+.space-between-item{
+  @include flex{
+    @include flex-op(center, flex-start);
+  }
+
+  gap: 10px;
+}
