--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -34,5 +34,6 @@
 @import "page/inquiry";
 @import "page/main";
 @import "page/mypage";
-@import "page/mypage-factcheck";
+@import "page/mypage-enterprise-info"; // 기업 정보
+@import "page/mypage-factcheck"; // 팩트체크
 @import "page/etpr-profile";
