--- a/src/assets/styles/base/_font.scss
+++ b/src/assets/styles/base/_font.scss
@@ -1,4 +1,5 @@
-/* =================== font =================== */
+/* ========== font ========== */
+
 /* ---------- NexonLv2Gothic ---------- */
 @font-face {
   font-family: "NexonLv2Gothic";
@@ -43,3 +44,5 @@
     url("~@/assets/fonts/A_NEXON_Lv2_Gothic/NexonLv2GothicLight.ttf")
       format("truetype"),
 }
+
+/* ========== END font ========== */
