--- a/src/assets/styles/component/_card.scss
+++ b/src/assets/styles/component/_card.scss
@@ -1,3 +1,5 @@
+/* ========== 카드 관련 스타일 ========== */
+
 .card{ // 프로필 카드
   width: 100%;
   
@@ -168,3 +170,5 @@
     flex-shrink: 0;
   }
 }
+
+/* ========== END 카드 관련 스타일 ========== */
