--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -1,3 +1,5 @@
+/* ========== layout footer 스타일 ========== */
+
 .footer {
   width: 100%;
   background-color: #171820;
@@ -94,3 +96,5 @@
     color: #8E909F;
   }
 }
+
+/* ========== END layout footer 스타일 ========== */
