--- a/src/assets/styles/layout/_terms.scss
+++ b/src/assets/styles/layout/_terms.scss
@@ -1,5 +1,5 @@
+/* ========== layout 이용약관 스타일 ========== */
 
-/* =================== 개인정보 처리방침 및 이용약관 =================== */
 .page.terms-page {
   padding-top: 0;
 
@@ -714,3 +714,5 @@
     padding: 10px;
   }
 }
+
+/* ========== END layout 이용약관 스타일 ========== */
