--- a/src/assets/styles/page/_mypage-enterprise-info.scss
+++ b/src/assets/styles/page/_mypage-enterprise-info.scss
@@ -1,6 +1,10 @@
+/* ========== 마이페이지 > 기업정보 ========== */
+
 // 마이페이지 > 기업정보 > 제출서류 관리
 .mypage-etpr-document-manage-form{
   .add-btn{
     margin: 20px 0 10px;
   }
 }
+
+/* ========== END 마이페이지 > 기업정보 ========== */
