--- a/src/assets/styles/page/_page404.scss
+++ b/src/assets/styles/page/_page404.scss
@@ -1,3 +1,4 @@
+/* ========== 에러페이지 ========== */
 .page-error{
   @include flex-center;
 
@@ -63,3 +64,4 @@
     margin-top: 40px;
   }
 }
+/* ========== END 에러페이지 ========== */
