--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -8,6 +8,7 @@
 @import "base/base";
 @import "base/font";
 @import "base/helper";
+@import "base/helper-font";
 
 // 3. vendor
 
@@ -19,7 +20,6 @@
 @import "component/form";
 
 // 5. layout
-@import "layout/layout";
 @import "layout/header";
 @import "layout/footer";
 @import "layout/modal";
