--- a/src/assets/styles/component/_button.scss
+++ b/src/assets/styles/component/_button.scss
@@ -1,7 +1,6 @@
-/* 버튼 스타일 */
+/* ========== 버튼, 뱃지 관련 스타일 ========== */
 
-// 버튼 스타일 초기화 믹스인
-@mixin btn-default{
+@mixin btn-default{ // 버튼 스타일 초기화 믹스인
   @include input-reset;
   
   cursor: pointer;
@@ -445,16 +444,14 @@
   }
 }
 
-/* 버튼 포지션 센터일 때 */
-[position="single-centered"]{
+[position="single-centered"]{ // 구성요소: 버튼 하나, 포지션 센터일 때
   display: block;
   margin: 0 auto;
   width: 100%;
   max-width: 235px;
 }
 
-/* 버튼 포지션 센터일 때 */
-[position="double-centered"]{
+[position="double-centered"]{ // 구성요소: 버튼 두개, 포지션 센터일 때
   margin: 0 auto;
   max-width: 380px;
 }
@@ -536,7 +533,6 @@
   color: white;
 }
 
-
 .badge-p{
   @include circle(18px);
 
@@ -574,8 +570,7 @@
   gap: 4px;
 }
 
-/* 토글 스타일 */
-.toggle-onoff{
+.toggle-onoff{ // 구성요소: 토글 스타일
   background-color: #8E909F;
   display: inline-block;
   width: 30px;
@@ -610,8 +605,7 @@
   }
 }
 
-/* 체크박스 스타일 */
-.check-onoff{
+.check-onoff{ // 구성요소: 체크박스 스타일
   @include bg-op($s: 16px, $p: 50% 50%);
 
   background-color: white;
@@ -630,8 +624,7 @@
   }
 }
 
-/* 별점 */
-.hover-desc{
+.hover-desc{ // 구성요소: 호버 툴팁
   position: relative;
 
   @include media(1200px, min){
@@ -658,7 +651,7 @@
   }
 }
 
-.hover-overlay{
+.hover-overlay{ // 구성요소: 호버 툴팁 오버레이
   background-color: black;
   position: fixed;
   top: 0;
@@ -677,7 +670,7 @@
   pointer-events: visible;
 }
 
-.hover-desc-box{
+.hover-desc-box{ // 구성요소: 호버 툴팁 설명 
   @include absolute($t: 10px, $l: 80%);
 
   z-index: 1;
@@ -753,3 +746,5 @@
   opacity: 1;
   pointer-events: visible;
 }
+
+/* ========== END 버튼, 뱃지 관련 스타일 ========== */
