--- a/src/assets/styles/component/_icon.scss
+++ b/src/assets/styles/component/_icon.scss
@@ -1,4 +1,5 @@
-// icon
+/* ========== icon 관련 스타일 ========== */
+
 .icon{
     @include bg-op($s: contain, $p: center);
 
@@ -137,3 +138,11 @@
 .icon-logout {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18.155' height='14.5' viewBox='0 0 18.155 14.5'%3E%3Cg id='icon-logout' transform='translate(-158.095 -955.195)'%3E%3Cpath id='패스_6650' data-name='패스 6650' d='M1036.263,520.024v-2.981h-10v13h10v-2.981' transform='translate(-867.418 438.901)' fill='none' stroke='%238e909f' stroke-miterlimit='10' stroke-width='1.5'/%3E%3Cg id='btn-prev-a' transform='translate(171.885 959.141)'%3E%3Cpath id='패스_1' data-name='패스 1' d='M-19274.736-7922.715l3.3,3.3-3.3,3.3' transform='translate(19274.736 7922.715)' fill='none' stroke='%238e909f' stroke-width='1.5'/%3E%3C/g%3E%3Cline id='선_874' data-name='선 874' x2='12.414' transform='translate(162.5 962.445)' fill='none' stroke='%238e909f' stroke-width='1.5'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
+
+.icon-i{
+  width: 24px;
+  height: 24px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg id='icon-info' transform='translate(-433 -560)'%3E%3Cg id='타원_341' data-name='타원 341' transform='translate(433 560)' fill='%23b8bac7' stroke='%238e909f' stroke-width='1'%3E%3Ccircle cx='12' cy='12' r='12' stroke='none'/%3E%3Ccircle cx='12' cy='12' r='11.5' fill='none'/%3E%3C/g%3E%3Cpath id='About' d='M1.44-10.76H4.56V0H1.44ZM3-12.26a1.979,1.979,0,0,1-1.4-.5A1.622,1.622,0,0,1,1.06-14a1.622,1.622,0,0,1,.54-1.24,1.979,1.979,0,0,1,1.4-.5,2.029,2.029,0,0,1,1.4.48,1.539,1.539,0,0,1,.54,1.2,1.7,1.7,0,0,1-.54,1.29A1.956,1.956,0,0,1,3-12.26Z' transform='translate(441.94 579.74)' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E%0A");
+}
+
+/* ========== END icon 관련 스타일 ========== */
