--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -1,3 +1,5 @@
+/* ========== layout header 스타일 ========== */
+
 // common
 .underline-color {
   position: relative;
@@ -453,3 +455,4 @@
   }
 }
 
+/* ========== END layout header 스타일 ========== */
