--- a/src/assets/styles/page/_auth.scss
+++ b/src/assets/styles/page/_auth.scss
@@ -1,4 +1,194 @@
+/* ========== auth 공통 ========== */
+
+.auth-hgrp{ // auth 관련 title group
+  width: 100%;
+  text-align: left;
+  margin-bottom: 50px;
+
+  .badge-flag{
+    margin-bottom: 5px;
+  }
+
+  .ttl{
+    @include font-op($w: 400, $c: #171820){
+      font-size: em(25);
+    }
+
+    -webkit-text-stroke: 1px #171820;
+    margin-bottom: 12px;
+
+    .ttl-txt{
+      vertical-align: middle;
+    }
+
+    .badge-auth{
+      margin-left: 6px;
+    }
+  }
+
+  .ttl-sub{
+    @include font-op($c: #171820){
+      font-size: 16px;
+    }
+
+    line-height: 1.5;
+  }
+
+  .ttl-sub-btn{
+    margin-top: 20px;
+    padding-left: 22px;
+    padding-right: 22px;
+  }
+}
+
+.auth-hgrp ~ .auth-form-area{ // 회원가입 폼 마진
+  margin-top: -10px;
+}
+
+.auth-hgrp ~ .ftck-auth-form-area{ // 팩트체커 회원가입 폼 마진
+  margin-top: -25px;
+}
+
+.symbol-fs{ // 팩트시트 심볼
+  max-width: 30px;
+  margin-bottom: 24px;
+}
+
+.type-slct-grp{ // 회원유형 및 형태 선택할 때 체크효과
+  @at-root .auth-panel &{
+    margin-top: -20px;
+    margin-bottom: 60px;
+  }
+}
+
+.type-slct-list{ // 회원유형 및 형태 선택할 때 체크효과
+  @include font-op($w: 500, $c: #171820){
+    font-size: em(20);
+  }
+
+  width: 100%;
+  border-bottom: 1px solid #DDDEE6;
+  padding: 10px 0;
+  cursor: pointer;
+
+  @include media(1200px, min){
+    &:hover{
+      .type-name{
+        font-weight: 600;
+      }
+
+      .type-name:before{
+        width: 20px;
+        margin-right: 10px;
+        opacity: 1;
+      }
+    }
+  }
+
+  .type-grp{
+    @include flex{
+      @include flex-op(center, space-between);
+    };
+
+    padding: 21px 0;
+    position: relative;
+  }
+
+  .type-name{
+    @include flex{
+      @include flex-op(center, flex-start);
+    }
+    
+    position: relative;
+
+    @include make-before{
+      opacity: 0;
+      width: 0;
+      height: 1px;
+      background-color: #171820;
+      margin-right: 0;
+      display: inline-block;
+      transition: all 0.3s;
+    }
+  }
+
+  .icon-check{
+    width: 23px;
+    height: 13px;
+    opacity: 0;
+    transition: all 0.2s;
+  }
+}
+
+.type-slct-list.is-active{ // 회원유형 및 형태 선택할 때 체크효과
+  .type-name{
+    font-weight: 600;
+  }
+
+  .type-name:before{
+    width: 20px;
+    margin-right: 10px;
+    opacity: 1;
+  }
+
+  .icon-check{
+    opacity: 1;
+  }
+}
+
+.auth-skip-ment{ // auth 관련 건너뛰기 멘트
+  @include flex-col;
+  @include flex-op(center, center);
+
+  gap: 12px;
+  padding: 50px 0 20px;
+
+  .skip-ment{
+    @include font-op($w: 500, $c: #8E909F){
+      font-size: 12px;
+    }
+  }
+
+  .btn-txt{
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+}
+
+.auth-complete-cont{ // auth 관련 회원가입 완료 박스
+  margin-top: -15px;
+  color: #171820;
+
+  .ttl-grp{
+    margin-bottom: 30px;
+  }
+
+  .ttl{
+    font-size: 29px;
+    letter-spacing: -0.5px;
+    margin-bottom: 20px;
+  }
+
+  .ttl-sub{
+    font-size: 16px;
+    line-height: 1.5;
+
+    .bold{
+      font-weight: 300;
+      -webkit-text-stroke: 1px #171820;
+    }
+  }
+
+  .inp-btn-grp{
+    margin-bottom: 50px;
+  }
+}
+
+/* ========== END auth 공통 ========== */
+
 /* ========== 로그인 ========== */
+
 .color-gray {
   color: #B8BAC7;
   font-weight: 600;
@@ -150,6 +340,7 @@
 .btn-join-wrap {
   padding-top: 20px;
 }
+
 /* ========== END 로그인 ========== */
 
 /* ========== 아이디 찾기 ========== */
@@ -190,6 +381,7 @@
 /* ========== END 아이디 찾기 ========== */
 
 /* ========== 비밀번호 찾기 - 이메일 전송 ========== */
+
 .time-btn-wrap {
   text-align: center;
   padding: 4px 0 10px;
@@ -207,4 +399,5 @@
     min-width: 100px;
   }
 }
+
 /* ========== END 비밀번호 찾기 - 이메일 전송 ========== */
