--- a/src/assets/styles/page/_main.scss
+++ b/src/assets/styles/page/_main.scss
@@ -1,4 +1,5 @@
-/* ========== 관련 애니메이션 ========== */
+/* ========== main 관련 애니메이션 ========== */
+
 @keyframes ifn-rotate {
   from {
     transform: rotate(0);
@@ -7,9 +8,11 @@
     transform: rotate(359deg);
   }
 }
-/* ========== END 관련 애니메이션 ========== */
+
+/* ========== END main 관련 애니메이션 ========== */
 
 /* ========== section-visual ========== */
+
 .section-visual {
   position: relative;
   width: 100%;
@@ -61,9 +64,11 @@
 .main-search-grp {
   width: 100%;
 }
+
 /* ========== END section-visual ========== */
 
 /* ========== section-join ========== */
+
 .section-join {
   
   .join-grp {
@@ -130,7 +135,6 @@
 }
 /* ========== END section-join ========== */
 
-
 // .swiper-wrapper {
 //   height: 485px;
 // }
@@ -152,6 +156,7 @@
 // }
 
 /* ========== section-video ========== */
+
 .section-video {
   padding: 70px 0;
   background-color: #1E2031;
@@ -197,9 +202,11 @@
     line-height: 1.4;
   }
 }
+
 /* ========== END section-video ========== */
 
 /* ========== section-recent-review ========== */
+
 .section-recent-review {
   padding: 80px 0 53.5px;
   overflow: hidden;
@@ -381,9 +388,11 @@
     }
   }
 }
+
 /* ========== END section-recent-review ========== */
 
 /* ========== section-subscribe ========== */
+
 .section-subscribe {
   padding: 60px 0 90px;
 
@@ -417,4 +426,5 @@
     }
   }
 }
+
 /* ========== END section-subscribe ========== */
