--- a/src/assets/styles/page/_mypage-factcheck.scss
+++ b/src/assets/styles/page/_mypage-factcheck.scss
@@ -1,4 +1,5 @@
-// 마이페이지 > 팩트체크 > 팩트체커 신청 
+/* ========== 마이페이지 > 팩트체크 ========== */
+/* 마이페이지 > 팩트체크 > 팩트체커 신청 */
 .ftck-card{
   background-color: white;
   padding: 40px;
@@ -54,7 +55,7 @@
   }
 }
 
-// 마이페이지 > 팩트체크 > 팩트체커 신청 > 신청서 작성
+/* 마이페이지 > 팩트체크 > 팩트체커 신청 > 신청서 작성 */
 .mypage-ftck-apply-create-page{
   .ftck-auth-form-area{
     max-width: 380px;
@@ -66,9 +67,11 @@
   }
 }
 
-// 마이페이지 > 팩트체크 > 팩트체커 신청 > 신청서 작성완료
+/* 마이페이지 > 팩트체크 > 팩트체커 신청 > 신청서 작성완료 */
 .mypage-ftck-apply-complete-page{
   .state-guide-box{
     margin-bottom: 40px;
   }
 }
+
+/* ========== END 마이페이지 > 팩트체크 ========== */
