--- a/src/assets/styles/utility/_variable.scss
+++ b/src/assets/styles/utility/_variable.scss
@@ -1,7 +1,6 @@
-// gray color는 따로 사용하고, red등의 컬러 추가해서 사용
+
 $color-set: (
-  primary: #6900d9,
-  active-bd-color: #8f58ff,
+  primary: #00EB79,
 );
 
 $zIndex-set: (
@@ -33,21 +32,3 @@ $breakpoints: (
     350px: "아이폰 작은버전",
   ),
 );
-
-$max-width: 1200px;
-$narrow-width: 460px;
-$narrow-width-320: 320px;
-$g-hd-height: em(90);
-$g-mb-hd-height: em(50);
-$g-ft-height: 207px;
-
-$g-box-radius: 10px;
-$g-box-dark-color: #1e1e1e;
-
-$g-gra-white: linear-gradient(to bottom, #fff, #e4dbef);
-
-$g-gra-bottom: linear-gradient(to bottom, #a34dff 26%, #6900d9);
-$g-gra-right: linear-gradient(to right, #a34dff 26%, #6900d9);
-$g-gra-45deg: linear-gradient(45deg, #a34dff, #6900d9);
-
-$g-mb-x-pd: 15px;
