--- a/src/assets/styles/layout/_common.scss
+++ b/src/assets/styles/layout/_common.scss
@@ -15,118 +15,6 @@
   }
 }
 
-.avatar-with-name{ // 구성요소: 아바타 + 이름정보
-  @include flex{
-    @include flex-op(center, flex-start);
-  }
-
-  .avatar{
-    margin-right: 8px;
-    flex-shrink: 0;
-  }
-
-  .name{
-    @include ellipse(1, 15px);
-    @include font-op($w: 400, $c: #171820){
-      font-size: 14px;
-    }
-
-    -webkit-text-stroke: 0.5px #171820;
-
-    &.name-lg {
-      @include ellipse(1, 20px);
-      @include font-op($w: 400, $c: #171820){
-        font-size: 20px;
-      }
-    }
-  }
-
-  .name-grp{
-    @include flex{
-      @include flex-op(flex-start, center);
-    }
-
-    flex-direction: column;
-    gap: 6px;
-
-    &.name-grp-lg {
-      gap: 10px;
-    }
-  }
-
-  .name-user-type{
-    @include font-op($w: 300, $c: #8e909f){
-      font-size: 12px;
-    }
-
-    -webkit-text-stroke: 0.5px #8e909f;
-    margin-bottom: 2px;
-  }
-
-  .name-subtxt-grp{
-    @include ellipse(1, 14px);
-    @include font-op($w: 300, $c: #8e909f){
-      font-size: 12px;
-    }
-
-    -webkit-text-stroke: 0.5px #8e909f;
-    display: inline-block;
-    width: 100%;
-    
-    &.name-subtxt-grp-lg {
-      @include ellipse(1, 14px);
-      @include font-op($w: 300, $c: #8e909f){
-        font-size: 14px;
-      }
-    }
-  }
-
-  .name-subtxt-list{
-    display: inline;
-    position: relative;
-    margin-right: 1.5px;
-    padding-right: 6px;
-
-    @include make-after('·'){
-      @include absolute($t: 0, $r: 0);
-      display: inline-block;
-      transform: translateX(-1px);
-    };
-
-    &:last-child{
-      margin-right: 0;
-
-      &:after{
-        content: '';
-      }
-    }
-  }
-}
-
-.col-avatar-with-name{ // 구성요소: 아바타 + 이름정보 세로버전
-  @include flex-op(flex-start, center);
-
-  flex-direction: column;
-  display: inline-flex;
-
-  .avatar{
-    margin: 0 auto 10px;
-  }
-
-  .name-grp{
-    text-align: center;
-  }
-
-  .name{
-    width: 100%;
-  }
-
-  .name-subtxt-grp{
-    margin-top: 2.5px;
-    font-size: 11px;
-  }
-}
-
 .icon-with-txt{ // 구성요소: 아이콘 + 텍스트
   @include flex{
     @include flex-op(flex-start, flex-start);
@@ -425,334 +313,7 @@
   line-height: 1.5;
 }
 
-.board-list-grp-ttl{ // 구성요소 - 게시판 list 갯수 알림
-  @include flex{
-    @include flex-op(center, flex-start);
-  }
-
-  margin-bottom: 15px;
-  color: #171820;
-  gap: 10px;
-
-  .txt{
-    font-size: 16px;
-    position: relative;
-
-    .bold{
-      font-weight: 300;
-      -webkit-text-stroke: 1px #171820;
-    }
-  }
-
-  .txt-right{
-    @include flex{
-      @include flex-op(center, flex-start);
-    }
-
-    margin-left: auto;
-    margin-right: 0;
-    gap: 10px;
-  }
-}
-
-.board-list-grp{ // 구성요소 - 게시판 list group
-  width: 100%;
-  border-top: 1px solid #171820;
-  margin-bottom: 60px;
-
-  .empty-wrap{
-    padding: 40px 0;
-  }
-}
-
-.board-list{ // 구성요소 - 게시판 list
-  @include flex{
-    @include flex-op(center, flex-start);
-  }
-
-  width: 100%;
-  border-bottom: 1px solid #DDDEE6;
-  color: #171820;
-  padding: 26px 40px;
-
-  &:hover{
-    // FIXME: 모바일일 때 제외해야할 수도
-    background-color: #F6FFFB;
-    cursor: pointer;
-  }
-
-  td{
-    padding: 0 10px;
-    flex-shrink: 0;
-  }
-
-  td:last-child{
-    padding-right: 0;
-  }
-  
-  .td-num{
-    min-width: 45px;
-    text-align: left;
-  }
-
-  .td-word-num{
-    font-size: 14px;
-    color: #8E909F;
-  }
-
-  .td-cat{
-    padding-right: 26px;
-  }
-
-  .td-word-cat{
-    font-size: 14px;
-    font-weight: 400;
-    -webkit-text-stroke: 0.5px #171820;
-  }
-
-  .td-subject{
-    flex: 1 1 auto;
-    width: 100%;
-    padding-top: 2.5px;
-  }
-
-  .td-word-subject{
-    @include ellipse(1, 19px);
-
-    font-size: 18px;
-  }
-
-  .td-word-writer{
-    font-size: 13px;
-    color: #8e909f;
-  }
-
-  .td-word-date{
-    font-size: 13px;
-    color: #B0B1BC;
-  }
-}
-
-// 구성요소 - 결과페이지 레이아웃
-.search-layout{
-  @include flex{
-    @include flex-op(flex-start, flex-start);
-  }
-
-  width: 100%;
-  max-width: 1350px;
-  margin: 0 auto;
-  padding: 40px 0 150px;
-  gap: 40px;
-
-  .search-layout-nav{
-    width: 100%;
-    max-width: 220px;
-    flex-shrink: 0;
-    position: sticky;
-    top: 110px;
-  }
-  
-  .search-layout-cont{
-    width: 100%;
-    padding-top: 45px;
-  }
-
-  .pagination{
-    margin-top: 50px;
-  }
-}
-
-.side-nav{
-}
-
-.side-nav-ttl-grp{
-  width: 100%;
-  border-bottom: 2px solid #00EB79;
-  padding-bottom: 18px;
-  margin-bottom: 3px;
-
-  .ttl{
-    @include font-op($w: 500, $c: #171820){
-      font-size: 20px;
-    };
-
-    line-height: 1.4;
-  }
-}
-
-.side-nav-grp{
-  width: 100%;
-  padding: 10px 0;
-  border-bottom: 1px solid #DDDEE6;
-
-  &:last-child{
-    border-bottom: 0;
-  }
-}
-
-.side-nav-top-grp{
-  .side-nav-btn{
-    padding: 8px 0;
-
-    .txt{
-      font-size: 14px;
-    }
-
-    .arrow{
-      margin-top: 4.5px;
-    }
-  }
-}
-
-.side-nav-list.is-active{
-  .side-nav-lnb-grp{
-    display: block;
-  }
-
-  .side-nav-btn {
-    .txt{
-      font-weight: 500;
-    }
-
-    .arrow{
-      transform: rotate(90deg);
-    }
-  }
-}
-
-.side-nav-btn{
-  @include flex{
-    @include flex-op(flex-start, flex-start);
-  }
-  @include input-reset;
-
-  width: 100%;
-  text-align: left;
-  padding: 11px 0;
-  cursor: pointer;
-
-  .txt{
-    display: block;
-    font-size: 16px;
-    line-height: 1.4;
-  }
-
-  .arrow{
-    @include bg-op($p: center, $s: contain);
-
-    display: block;
-    width: 15px;
-    height: 10px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='5.592' height='9.061' viewBox='0 0 5.592 9.061'%3E%3Cpath id='패스_1' data-name='패스 1' d='M-19274.736-7922.715l4,4-4,4' transform='translate(19275.268 7923.245)' fill='none' stroke='%23171820' stroke-width='1.5'/%3E%3C/svg%3E%0A");
-    margin-left: auto;
-    margin-right: 0;
-    transition: all 0.2s;
-    transform: rotate(0);
-    margin-top: 6px;
-  }
-}
-
-.side-nav-lnb-grp{
-  width: 100%;
-  padding: 5px 0 10px;
-  padding-left: 20px;
-  display: none;
-
-  .lnb-btn{
-    @include input-reset;
-
-    display: inline-block;
-    width: 100%;
-    font-size: 15px;
-    color: #8E909F;
-    text-align: left;
-    margin: 6px 0;
-    cursor: pointer;
-  }
-
-  .lnb-btn.router-link-active{
-    color: #171820;
-    -webkit-text-stroke: 0.5px #171820;
-  }
-}
-
-// 구성요소 - 결과 grid
-.card-grid-grp{
-  width: 100%;
-  max-width: 1090px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  row-gap: 50px;
-  column-gap: 17px;
-
-  .card{
-    width: 100%;
-    cursor: pointer;
-  }
-}
-
-.card-grid-grp-ttl{
-  @include flex{
-    @include flex-op(center, flex-start);
-  }
-
-  margin-bottom: 15px;
-  color: #171820;
-  gap: 10px;
-
-  .txt{
-    font-size: 16px;
-    position: relative;
-
-    .bold{
-      font-weight: 300;
-      -webkit-text-stroke: 1px #171820;
-    }
-  }
-
-  .highlight{
-    position: relative;
-    font-weight: 500;
-
-    @include make-before{
-      @include absolute($b: 0);
-
-      display: inline-block;
-      width: 100%;
-      height: 4px;
-      background-color: #53FF81;
-      z-index: 0;
-    }
-
-    u{
-      position: relative;
-      z-index: 1;
-      text-decoration: none;
-    }
-  }
-
-  .txt-right{
-    @include flex{
-      @include flex-op(center, flex-start);
-    }
-
-    margin-left: auto;
-    margin-right: 0;
-    gap: 10px;
-  }
-
-  .custom-slct{
-    width: 150px;
-  }
-
-  .img-advice{
-    @include absolute($b: 0, $r: -73px);
-  }
-}
-
-// 구성요소 - 브레드크럼
-.breadcrumb{
+.breadcrumb{ // 구성요소 - 브레드크럼
   font-size: 13px;
   color: #8E909F;
   text-align: left;
@@ -777,55 +338,7 @@
   }
 }
 
-// 구성요소 - 결과페이지 레이아웃 제목
-.search-cont-hgrp{
-  margin-bottom: 19px;
-
-  .breadcrumb{
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  .ttl{
-    @include font-op($c: #171820, $w: 500){
-      font-size: 28px;
-    }
-    line-height: 1.4;
-  }
-}
-
-// 구성요소 - 결과페이지 결과 없을 때
-.nothing-result-box{
-  @include flex-center;
-  @include flex-col;
-
-  background-color: #F9F9FB;
-  padding: 70px 20px;
-  text-align: center;
-
-  .empty-txt{
-    font-weight: 500;
-    font-size: 20px;
-    color: #171820;
-  }
-
-  .desc{
-    @include font-op($c: #171820){
-      font-size: 18px;
-    }
-
-    line-height: 1.4;
-    margin: 15px 0 20px;
-  }
-
-  .btn-bd{
-    width: 100%;
-    max-width: 145px;
-  }
-}
-
-// 구성요소 - 이름 & 번호
-.txt-dark-gray{
+.txt-dark-gray{ // 구성요소 - 이름 & 번호
   .txt-dark{
     font-size: 14px;
     color: #171820;
@@ -839,8 +352,7 @@
   }
 }
 
-// 구성요소 - 박스 리스트 그룹
-.box-list-grp{
+.box-list-grp{ // 구성요소 - 박스 리스트 그룹
   width: 100%;
   border-top: 0;
   // border: 1px solid #DDDEE6;
@@ -859,7 +371,7 @@
   }
 }
 
-.box-choice-list{
+.box-choice-list{ // 구성요소 - 박스 리스트 (호버시 테두리)
   padding: 15px;
 
   @include flex{
@@ -872,8 +384,7 @@
   }
 }
 
-// 구성요소 - '검색어' 결과 건수 텍스트
-.cnt-txt-grp{
+.cnt-txt-grp{ // 구성요소 - '검색어' 결과 건수 텍스트
   @include flex{
     @include flex-op(center, flex-start);
   }
@@ -912,8 +423,7 @@
   }
 }
 
-// 구성요소 - 포인트 레이블 & 포인트
-.lbel-amount-point{
+.lbel-amount-point{ // 구성요소 - 사용되는 포인트 박스
   @include flex{
     @include flex-op(center, space-between)
   };
@@ -941,12 +451,11 @@
   }
 }
 
-// 구성요소 - toggle list
-.toggle-list-grp{
+.toggle-list-grp{ // 구성요소 - 항목 공개 설정 toggle list group
   width: 100%;
 }
 
-.toggle-list{
+.toggle-list{ // 구성요소 - 항목 공개 설정 toggle list
   @include flex{
     @include flex-op(flex-start, space-between);
   }
@@ -963,337 +472,7 @@
   }
 }
 
-// 구성요소 -  마이페이지의 게시물 상세
-.mypboard-detail-hd{
-  @include flex{
-    @include flex-op(center, flex-start);
-  }
-
-  width: 100%;
-  padding: 15px 40px;
-
-  .mypboard-etc-grp{
-    @include flex-center;
-
-    gap: 15px;
-    font-size: 13px;
-    margin-left: auto;
-  }
-}
-
-.mypboard-detail-cont{
-  width: 100%;
-  margin-top: 30px;
-  padding: 0 40px 30px;
-  
-  .mypboard-cont-ttl{
-    @include flex{
-      @include flex-op(center, space-between);
-    }
-
-    width: 100%;
-    margin-bottom: 20px;
-
-    .right-grp{
-      @include flex{
-        @include flex-op(center, flex-end);
-      }
-
-      gap: 15px;
-    }
-  }
-
-  .mypboard-cont{
-    @include font-op($c: #5C5E70){
-      font-size: 15px;
-    }
-
-    line-height: 1.5;
-  }
-
-  .mypboard-btns{
-    @include flex{
-      @include flex-op(center, flex-end);
-    }
-
-    gap: 20px;
-    margin-top: 30px;
-  }
-}
-
-// 구성요소 - 쪽지함 페이지
-.mypage-note-list-page{
-  .inp-sch-grp{
-    margin-bottom: 15px;
-    max-width: 360px;
-  }
-
-  .tab{
-    margin-bottom: 30px;
-  }
-}
-
-// 쪽지함 list 페이지: 받은 쪽지, 보낸 쪽지
-.note-list-grp{
-  border-top: 0;
-
-  .board-list{
-    padding: 11.5px 40px;
-    border: 1px solid #DDDEE6;
-    margin-top: -1px;
-  }
-
-  .board-list:hover{
-    position: relative;
-    z-index: 1;
-    border: 1px solid #00EB79;
-    background-color: #F6FFFB;
-  }
-
-  .td-subject{
-    padding-top: 0;
-  }
-
-  .td-word-subject{
-    @include ellipse(1, 15px);
-
-    color: #5c5e70;
-    font-size: 13px;
-  }
-}
-
-// 쪽지함 detail 페이지: 쪽지 상세
-.nboard-detail-wrap{
-  border: 1px solid #DDDEE6;
-
-  .mypboard-detail-hd{
-    background-color: #F9F9FB;
-  }
-}
-
-// 쪽지함 create 페이지: 쪽지 보내기
-.nboard-form-wrap{
-  border: 1px solid #DDDEE6;
-  padding: 30px 40px 40px;
-
-  .nboard-form-hd{
-    width: 100%;
-    border-bottom: 1px solid #dddee6;
-  }
-
-  .nboard-form-ttl{
-    @include font-op($w: 500, $c: #171820){
-      font-size: 18px;
-    } 
-
-    line-height: 1.4;
-    padding-bottom: 25px;
-  }
-
-  .nboard-btn-grp{
-    max-width: 380px;
-    margin: 35px auto 0;
-  }
-}
-
-.nboard-form-item{
-  @include flex{
-    @include flex-op(stretch, flex-start);
-  };
-
-  flex-direction: column;
-  margin: 20px 0;
-
-  &:last-child{
-    margin-bottom: 0;
-  }
-  
-  .lbel{
-    @include flex{
-      @include flex-op(center, flex-start);
-    }
-
-    color: #5C5E70;
-    margin-bottom: 10px;
-
-    .length-unit{
-      margin-left: auto;
-    }
-  }
-}
-
-.nboard-form-item.type-row{
-  @include flex-op(center, flex-start);
-
-  flex-direction: row;
-
-  .lbel{
-    min-width: 50px;
-    padding-right: 15px;
-    margin-bottom: 0;
-  }
-}
-
-// 마이페이지 구성원 관리
-.mypage-common-card{
-  width: 100%;
-  background-color: white;
-  padding: 40px;
-}
-
-// 구성요소: 마이페이지 안내사항 멘트
-.guide-box{
-  @include flex{
-    @include flex-op(flex-start, flex-start);
-  }
-  
-  width: 100%;
-  background-color: #F9F9FB;
-  padding: 20px;
-  color: #5C5E70;
-  margin-bottom: 30px;
-
-  .guide-box-cont{
-    @include flex{
-      @include flex-op(flex-start, flex-start);
-    }
-
-    padding-top: 14px;
-  }
-
-  .lbel{
-    color: inherit;
-    font-weight: 500;
-    flex-shrink: 0;
-    padding-right: 10px;
-    padding-top: 2px;
-  }
-
-  .txt{
-    font-size: 14px;
-    line-height: 1.4;
-    padding: 0 10px;
-  }
-
-  .btn-grp{
-    margin-left: auto;
-    flex-shrink: 0;
-
-    .btn-sm{
-      min-width: 130px;
-    }
-  }
-} 
-
-// 구성요소 - 구성원 list들
-.member-list-grp-ttl{
-  @include flex{
-    @include flex-op(center, flex-start);
-  }
-
-  margin-bottom: 15px;
-  color: #171820;
-  gap: 10px;
-
-  .txt{
-    font-size: 14px;
-    position: relative;
-
-    .bold{
-      font-weight: 300;
-      -webkit-text-stroke: 1px #171820;
-    }
-  }
-
-  .txt-right{
-    @include flex{
-      @include flex-op(center, flex-start);
-    }
-
-    margin-left: auto;
-    margin-right: 0;
-    gap: 10px;
-  }
-}
-
-.member-list-grp{
-  width: 100%;
-
-  .empty-wrap{
-    padding: 40px 0;
-  }
-}
-
-.member-list{
-  @include flex{
-    @include flex-op(flex-start, flex-start);
-  }
-
-  width: 100%;
-  margin: 10px 0;
-  border: 1px solid #DDDEE6;
-  color: #171820;
-  padding: 30px 40px 20px;
-
-  &:first-child{
-    margin-top: 0;
-  }
-
-  &:last-child{
-    margin-bottom: 0;
-  }
-
-  .avatar{
-    flex-shrink: 0;
-    width: 100px;
-    height: 100px;
-    margin-right: 25px;
-  }
-
-  .member-btn-grp{
-    margin-left: auto;
-    flex-shrink: 0;
-    gap: 8px;
-  }
-}
-
-.member-info{
-  width: 100%;
-
-  .account-info{
-    @include flex{
-      @include flex-op(flex-start, flex-start);
-    }
-  
-    flex-direction: column;
-    width: 100%;
-    gap: 8px;
-    margin-bottom: 25px;
-
-    .name{
-      font-size: 20px;
-    }
-
-    .mail{
-      width: 100%;
-      display: inline-block;
-      font-size: 14px;
-    }
-  }
-
-  .dlist{
-    font-size: 13px;
-
-    .lbel{
-      flex-shrink: 0;
-      width: auto;
-      max-width: none;
-    }
-  }
-}
-
-// 구성요소 - 이름 & 메일
-.account-info{
+.account-info{ // 구성요소 - 이름 & 메일
   .name{
     font-weight: 500;
     color: #171820;
@@ -1305,83 +484,7 @@
   }
 }
 
-// 구성요소 - 그룹원 list들
-.box-grpmember-list{
-  @include flex{
-    @include flex-op(center, flex-start);
-  }
-
-  margin: 5px 0;
-  padding: 17px 40px;
-  position: relative;
-
-  &:hover{
-    .tooltip-apply{
-      opacity: 1;
-      top: -35px;
-    }
-  }
-
-  .tooltip-apply{
-    @include absolute($t: -30px);
-
-    z-index: 1;
-    background-color: white;
-    box-shadow: 0 3px 6px rgba(#5C5E70, 0.2);
-    color: #8E909F;
-    padding: 5.5px 8px;
-    font-size: 12px;
-    opacity: 0;
-    transition: all 0.2s;
-  }
-
-  .account-type{
-    font-size: 13px;
-    color: #5C5E70;
-    font-weight: 500;
-    padding-right: 20px;
-    border-right: 1px solid #DDDEE6;
-    margin-right: 20px;
-  }
-
-  .account-info{
-    // @include ellipse(1, 18px);
-    @include flex{
-      @include flex-op(center, center);
-    }
-    
-    position: relative;
-    gap: 10px;
-
-    .name{
-      font-size: 16px;
-    }
-
-    .mail{
-      font-size: 13px;
-    }
-  }
-
-  .btn-grp{
-    margin-left: auto;
-    margin-right: 0;
-
-    .btn-xsm{
-      padding: 7.5px 15px;
-    }
-
-    .btn-bd-light{
-      color: #8E909F;
-    }
-  }
-}
-
-.box-grpmember-list.is-active{
-  border-color: #5C5E70;
-}
-
-// 구성요소 bullet style list
-.ul-bullet{
+.ul-bullet{ // 구성요소 bullet style list
   .list{
     margin: 10px 0;
     color: #171820;
@@ -1399,8 +502,7 @@
   }
 }
 
-// 구성요소 complete 시 안내박스
-.state-guide-box{
+.state-guide-box{ // 구성요소 complete 시 안내박스
   text-align: center;
   color: #171820;
 
@@ -1421,128 +523,7 @@
   }
 }
 
-// 구성요소 팩트체크 인트로 박스
-.ftck-intro-box{
-  background-color: #171820;
-  color: white;
-  text-align: left;
-  padding: 40px;
-  margin-bottom: 10px;
-
-  .check-badge{
-    margin-bottom: 6px;
-    margin-top: 20px;
-  }
-
-  .ttl{
-    @include font-op($w: 600, $c: white){
-      font-size: 20px;
-    }
-
-    line-height: 1.5;
-
-    .point-color{
-      color: #00eb79;
-    }
-  }
-
-  .ttl-lg{
-    font-size: 25px;
-  }
-
-  .inp-sch-grp{
-    margin-top: 30px;
-    max-width: 505px;
-
-    .inp{
-      border-color: #00eb79;
-    }
-  }
-}
-
-// 구성요소 팩트체크 리스트
-.ftck-list-grp{
-  border-top: 0;
-
-  .empty-wrap{
-    padding: 60px 0 50px;
-  }
-
-  .board-list{
-    margin-bottom: 10px;
-    background-color: white;
-    border: 0;
-  }
-
-  .board-list.is-secret{
-    .subject{
-      color: #8E909F;
-    }
-  }
-}
-
-.ftck-state-subject{
-  .ftck-state{
-    @include flex{
-      @include flex-op(center, flex-start)
-    };
-  
-    gap: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .ftck-subject{
-    @include flex{
-      @include flex-op(center, flex-start)
-    };
-  
-    gap: 8px;
-  
-    .lbel{
-      color: #8E909F;
-      padding-top: 3px;
-      flex-shrink: 0;
-    }
-  
-    .subject{
-      @include ellipse(1, 18px);
-      @include font-op($c: #171820, $w: 500){
-        font-size: 16px;
-      }
-    }
-  }
-}
-
-.ftck-detail-wrap{
-  background-color: white;
-  padding: 0 40px;
-
-  .mypboard-detail-hd,
-  .mypboard-detail-cont{
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .mypboard-detail-hd{
-    border-bottom: 1px solid #DDDEE6;
-  }
-
-  .mypboard-cont{ // 팩트체크 상세
-    width: 100%;
-    border-bottom: 1px solid #DDDEE6;
-    margin-bottom: 30px;
-    padding-bottom: 30px;
-
-    &:last-child{
-      border-bottom: 0;
-      margin-bottom: 0;
-      padding-bottom: 0;
-    }
-  }
-}
-
-// 구성요소: label + toggle
-.toggle-item{
+.toggle-item{ // 구성요소: label + toggle
   .tg-lbel{
     display: inline-block;
     vertical-align: middle;
