--- a/src/assets/styles/layout/_mypage.scss
+++ b/src/assets/styles/layout/_mypage.scss
@@ -1,3 +1,6 @@
+/* ========== layout mypage 스타일 ========== */
+
+/* ----------------- 레이아웃 ----------------- */
 .mypage-page{
   .header-inner{
     border-bottom: 1px solid #DDDEE6;
@@ -14,7 +17,58 @@
   background-color: #F9F9FB;
 }
 
-// 사이드네비게이션
+.guide-box{ // 구성요소: 마이페이지 안내사항 멘트
+  @include flex{
+    @include flex-op(flex-start, flex-start);
+  }
+  
+  width: 100%;
+  background-color: #F9F9FB;
+  padding: 20px;
+  color: #5C5E70;
+  margin-bottom: 30px;
+
+  .guide-box-cont{
+    @include flex{
+      @include flex-op(flex-start, flex-start);
+    }
+
+    padding-top: 14px;
+  }
+
+  .lbel{
+    color: inherit;
+    font-weight: 500;
+    flex-shrink: 0;
+    padding-right: 10px;
+    padding-top: 2px;
+  }
+
+  .txt{
+    font-size: 14px;
+    line-height: 1.4;
+    padding: 0 10px;
+  }
+
+  .btn-grp{
+    margin-left: auto;
+    flex-shrink: 0;
+
+    .btn-sm{
+      min-width: 130px;
+    }
+  }
+} 
+
+.mypage-common-card{ // 구성요소: 마이페이지 하얀색 배경
+  width: 100%;
+  background-color: white;
+  padding: 40px;
+}
+
+/* ----------------- END 레이아웃 ----------------- */
+
+/* ----------------- 사이드네비게이션 ----------------- */
 .layout-mypage-side-nav{
   @include custom-scroll($c: #dddee6, $w: 4px);
 
@@ -30,7 +84,7 @@
   position: relative;
 }
 
-.mypage-snav-ttl-grp{
+.mypage-snav-ttl-grp{ // 사이드네비 제목
   border-bottom: 0;
   margin-bottom: 17px;
 
@@ -42,11 +96,11 @@
   }
 }
 
-.mypage-snav-grp{
+.mypage-snav-grp{ // 사이드네비 네비게이션 그룹
   padding: 22px 0;
 }
 
-.mypage-snav-list.is-active{
+.mypage-snav-list.is-active{ // 사이드네비 하위메뉴있는 대메뉴일 시, 클릭하면 하위메뉴 보이게 + 화살표 돌리기
   .mypage-snav-lnb-grp{
     display: block;
   }
@@ -62,7 +116,7 @@
   }
 }
 
-.mypage-snav-btn{
+.mypage-snav-btn{ // 사이드네비 대메뉴버튼
   @include flex{
     @include flex-op(flex-start, flex-start);
   }
@@ -102,7 +156,7 @@
   border-radius: 10px;
 }
 
-.mypage-snav-lnb-grp{
+.mypage-snav-lnb-grp{ // 사이드네비 하위메뉴 그룹
   width: 100%;
   padding: 15px 0 5px;
   padding-left: 30px;
@@ -126,7 +180,10 @@
   }
 }
 
-// 우측 컨텐츠영역
+/* ----------------- END 사이드네비게이션 ----------------- */
+
+/* ----------------- 우측 컨텐츠영역 ----------------- */
+
 .layout-mypage-container{
   @include custom-scroll($c: #c4c5cc, $w: 8px);
   @include flex-col;
@@ -151,7 +208,7 @@
   }
 }
 
-.mypage-container{
+.mypage-container{ // 우측컨텐츠 마이페이지 레이아웃
   padding: 40px 0;
   width: 90%;
   max-width: 1090px;
@@ -167,7 +224,7 @@
   }
 }
 
-.mypage-white-container{
+.mypage-white-container{ // 우측컨텐츠 배경 하얀색일 때
   width: 100%;
   max-width: 100%;
   background-color: white;
@@ -191,7 +248,10 @@
   }
 }
 
-// 페이지 구성요소) 마이페이지 페이지 제목
+/* ----------------- END 우측 컨텐츠영역 ----------------- */
+
+/* ----------------- 마이페이지 페이지 제목 ----------------- */
+
 .mypage-hgrp{
   width: 100%;
   margin-bottom: 35px;
@@ -210,6 +270,72 @@
   }
 }
 
-// 페이지 구성요소) 마이페이지 페이지 컨텐츠
+/* ----------------- END 마이페이지 페이지 제목 ----------------- */
+
+/* ----------------- 마이페이지 페이지 컨텐츠 ----------------- */
+
 .mypage-cont-wrap{
 }
+
+/* ----------------- END 마이페이지 페이지 컨텐츠 ----------------- */
+
+/* ----------------- 마이페이지 게시판 레이아웃 ----------------- */
+
+.mypboard-detail-hd{
+  @include flex{
+    @include flex-op(center, flex-start);
+  }
+
+  width: 100%;
+  padding: 15px 40px;
+
+  .mypboard-etc-grp{
+    @include flex-center;
+
+    gap: 15px;
+    font-size: 13px;
+    margin-left: auto;
+  }
+}
+
+.mypboard-detail-cont{
+  width: 100%;
+  margin-top: 30px;
+  padding: 0 40px 30px;
+  
+  .mypboard-cont-ttl{
+    @include flex{
+      @include flex-op(center, space-between);
+    }
+
+    width: 100%;
+    margin-bottom: 20px;
+
+    .right-grp{
+      @include flex{
+        @include flex-op(center, flex-end);
+      }
+
+      gap: 15px;
+    }
+  }
+
+  .mypboard-cont{
+    @include font-op($c: #5C5E70){
+      font-size: 15px;
+    }
+
+    line-height: 1.5;
+  }
+
+  .mypboard-btns{
+    @include flex{
+      @include flex-op(center, flex-end);
+    }
+
+    gap: 20px;
+    margin-top: 30px;
+  }
+}
+
+/* ----------------- END 마이페이지 게시판 레이아웃 ----------------- */
