--- a/src/assets/styles/ui.scss
+++ b/src/assets/styles/ui.scss
@@ -35,8 +35,8 @@
 @import "page/inquiry";
 @import "page/main";
 @import "page/search-result";
-@import "page/mypage";
+@import "page/etpr-profile"; // 기업 프로필
+@import "page/mypage"; // cgs 마이페이지
 @import "page/mypage-enterprise-info"; // 기업 정보
 @import "page/mypage-factcheck"; // 팩트체크
 @import "page/mypage-note"; // 쪽지함
-@import "page/etpr-profile";
